--- a/travis.yml
+++ b/travis.yml
@@ -38,75 +38,74 @@ services:
   - docker
   
 env:
-  - CONDA_RECIPE=bin/conda/vcs
+  # - CONDA_RECIPE=bin/conda/vcs
   - CONDA_RECIPE=bin/conda/python-scons
     CONDA_VERSION=2
-    CPU_COUNT=1
   - CONDA_RECIPE=bin/conda/python-scons
     CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/scons-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-parse
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/llvm-suite
-  # - CONDA_RECIPE=bin/conda/glibc
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/python-toolchain
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=2
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-suite
-    CONDA_VERSION=3
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-meta
-    CONDA_VERSION=2
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=bin/conda/boost-meta
-    CONDA_VERSION=3
-    TRAVIS_WAIT=50
-  - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
-    CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/SoftMaint/bin/conda/python-softmaint
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/SoftMaint/bin/conda/python-softmaint
-    CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
-  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clang
+  # - CONDA_RECIPE=bin/conda/scons-tools
   #   CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
-    CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
-    CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/scons-tools
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-parse
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/llvm-suite
+  # - CONDA_RECIPE=bin/conda/glibc
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/python-toolchain
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-suite
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-meta
+  #   CONDA_VERSION=2
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=bin/conda/boost-meta
+  #   CONDA_VERSION=3
+  #   TRAVIS_WAIT=50
+  # - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/SoftMaint/bin/conda/python-softmaint
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/SoftMaint/bin/conda/python-softmaint
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
+  # # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clang
+  # #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/libclanglite
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+  #   CONDA_VERSION=3
   - ANACONDA_RELABEL=main
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    CONDA_VERSION=3
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   CONDA_VERSION=3
 
 matrix:
   fast_finish: true
