--- a/appveyor.yml
+++ b/appveyor.yml
@@ -91,6 +91,21 @@ environment:
 matrix:
   allow_failures:
     - platform: x86
+      CONDA_RECIPE: bin\conda\python-scons
+      CONDA_VERSION: 3
+    - platform: x86
+      CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 2
+    - platform: x86
+      CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 3
+    - platform: x64
+      CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 2
+    - platform: x64
+      CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 3
+    - platform: x86
       CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 2
     - platform: x86
@@ -104,7 +119,7 @@ matrix:
       CONDA_VERSION: 3
 
 install:
-  - git clone https://github.com/StatisKit/appveyor-ci.git
+  - git clone https://github.com/StatisKit/appveyor-ci.git --depth=1
   - cd appveyor-ci
   - call install.bat
     
