--- a/appveyor.yml
+++ b/appveyor.yml
@@ -86,7 +86,7 @@ environment:
       CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
       CONDA_VERSION: 3
-    - ANACONDA_RELABEL: main
+    - ANACONDA_RELEASE: true
 
 matrix:
   allow_failures:
