Update python-toolchain recipe

--- a/bin/conda/python-toolchain/meta.yaml
+++ b/bin/conda/python-toolchain/meta.yaml
@@ -53,6 +53,6 @@ requirements:
     - pillow
     - libtoolchain
 
-test:
-  commands:
-    - nosetests -h
+test:                          [not win]
+  commands:                    [not win]
+    - nosetests -h             [not win]
