Update python-toolchain recipe

--- a/bin/conda/python-toolchain/meta.yaml
+++ b/bin/conda/python-toolchain/meta.yaml
@@ -46,7 +46,7 @@ requirements:
     - path.py
     - pywin32                      [win]
     - pyyaml
-    # - nose
+    - nose
     - coverage
     - sphinx
     - cmake
