--- a/travis.yml
+++ b/travis.yml
@@ -63,8 +63,10 @@ env:
     CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/boost-suite
     CONDA_VERSION=2
+    TRAVIS_WAIT=30
   - CONDA_RECIPE=bin/conda/boost-suite
     CONDA_VERSION=3
+    TRAVIS_WAIT=30
   - CONDA_RECIPE=bin/conda/boost-meta
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/boost-meta
