--- a/travis.yml
+++ b/travis.yml
@@ -152,6 +152,12 @@ matrix:
     - os: linux
       env: CONDA_RECIPE=bin/conda/python-scons
            CONDA_VERSION=3
+    - os: linux
+      env: CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+           CONDA_VERSION=2
+    - os: linux
+      env: CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
+           CONDA_VERSION=3
     - os: osx
       env: CONDA_RECIPE=bin/conda/llvm-suite
     # - os: osx
