--- a/bin/docker/linux-64/Dockerfile
+++ b/bin/docker/linux-64/Dockerfile
@@ -19,12 +19,10 @@ RUN chmod a+rwx miniconda.sh
 RUN ./miniconda.sh -b -p /home/main/miniconda
 RUN rm miniconda.sh
 env PATH /home/main/miniconda:/home/main/miniconda/bin:$PATH
-env ARCH 64
 RUN chmod -R a+rwx /home/main/miniconda
 RUN conda config --set always_yes yes
 RUN conda install git conda-build anaconda-client
 RUN echo "source activate root" >> .bashrc
 
-COPY build.sh /home/main/build.sh
+COPY release.sh /home/main/release.sh
 COPY deploy.sh /home/main/deploy.sh
-COPY install.sh /home/main/install.sh
