--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,6 +90,10 @@ environment:
       CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
       CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\statiskit-dev
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\statiskit-dev
+      CONDA_VERSION: 3
     - ANACONDA_RELEASE: true
 
 matrix:
