--- a/travis.yml
+++ b/travis.yml
@@ -95,6 +95,10 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
     CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/statiskit-dev
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/statiskit-dev
+    CONDA_VERSION=3
   - DOCKER_CONTEXT=bin/docker/linux-32
     CONDA_VERSION=2
   - DOCKER_CONTEXT=bin/docker/linux-32
