--- a/bin/conda/statiskit-dev/meta.yaml
+++ b/bin/conda/statiskit-dev/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - python-toolchain
     - python-autowig
     - python-clanglite
+    - vcs
     # - conda-tools
     # - devops-tools
   run:
@@ -28,6 +29,7 @@ requirements:
     - {{ pin_compatible('python-toolchain', exact=True) }}
     - {{ pin_compatible('python-autowig', exact=True) }}
     - {{ pin_compatible('python-clanglite', exact=True) }}
+    - {{ pin_compatible('vcs', exact=True) }}
     # - {{ pin_compatible('conda-tools', exact=True) }}
     # - {{ pin_compatible('devops-tools', exact=True) }}
 
