--- a/bin/conda/statiskit-dev/meta.yaml
+++ b/bin/conda/statiskit-dev/meta.yaml
@@ -19,8 +19,8 @@ requirements:
     - python-autowig
     - python-clanglite
     - vcs
-    # - conda-tools
-    # - devops-tools
+    - conda-tools
+    - devops-tools
   run:
     - python
     - {{ pin_compatible('libboost', exact=True) }}
@@ -30,6 +30,6 @@ requirements:
     - {{ pin_compatible('python-autowig', exact=True) }}
     - {{ pin_compatible('python-clanglite', exact=True) }}
     - {{ pin_compatible('vcs', exact=True) }}
-    # - {{ pin_compatible('conda-tools', exact=True) }}
-    # - {{ pin_compatible('devops-tools', exact=True) }}
+    - {{ pin_compatible('conda-tools', exact=True) }}
+    - {{ pin_compatible('devops-tools', exact=True) }}
 
