--- a/travis.yml
+++ b/travis.yml
@@ -75,10 +75,10 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=share/git/conda-tools/bin/conda/conda-tools
     CONDA_VERSION=3
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=share/git/devops-tools/bin/conda/devops-tools
+    CONDA_VERSION=3
   - CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
   - CONDA_RECIPE=share/git/ClangLite/bin/conda/clang
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clang
