--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "share/git/conda-tools"]
 	path = share/git/conda-tools
 	url = https://github.com/StatisKit/conda-tools
+[submodule "share/git/FP17"]
+	path = share/git/FP17
+	url = https://github.com/StatisKit/FP17
