--- a/travis.yml
+++ b/travis.yml
@@ -99,18 +99,56 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-dev
     CONDA_VERSION=3
-  # - DOCKER_CONTEXT=bin/docker/linux-32
-  #   DOCKER_CONTAINER=linux-32
-  #   CONDA_VERSION=2
-  # - DOCKER_CONTEXT=bin/docker/linux-32
-  #   DOCKER_CONTAINER=linux-32
-  #   CONDA_VERSION=3
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=2
-  # - DOCKER_CONTEXT=bin/docker/linux-64
-  #   DOCKER_CONTAINER=linux-64
-  #   CONDA_VERSION=3
+  - CONDA_VERSION=2
+    CONDA_RECIPE=share/git/FP17/bin/conda/fp17
+  - CONDA_VERSION=3
+    CONDA_RECIPE=share/git/FP17/bin/conda/fp17
+  - CONDA_VERSION=2
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/basic.ipynb
+    TRAVIS_WAIT=30
+  - CONDA_VERSION=2
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/subset.ipynb
+    TRAVIS_WAIT=50
+  - CONDA_VERSION=2
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/template.ipynb
+    TRAVIS_WAIT=50
+  - CONDA_VERSION=2
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/dependent.ipynb
+    TRAVIS_WAIT=50
+  - CONDA_VERSION=3
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/basic.ipynb
+    TRAVIS_WAIT=30
+  - CONDA_VERSION=3
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/subset.ipynb
+    TRAVIS_WAIT=50
+  - CONDA_VERSION=3
+    CONDA_PACKAGES=fp17
+    JUPYTER_NOTEBOOK=share/git/FP17/share/jupyter/template.ipynb
+    TRAVIS_WAIT=30
+  - DOCKER_CONTEXT=bin/docker/linux-32
+    DOCKER_CONTAINER=linux-32
+    CONDA_VERSION=2
+  - DOCKER_CONTEXT=bin/docker/linux-32
+    DOCKER_CONTAINER=linux-32
+    CONDA_VERSION=3
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=2
+  - DOCKER_CONTEXT=bin/docker/linux-64
+    DOCKER_CONTAINER=linux-64
+    CONDA_VERSION=3
+  - DOCKER_CONTEXT=share/git/FP17/bin/docker/linux-64
+    DOCKER_CONTAINER=fp17
+    CONDA_VERSION=2  
+  - DOCKER_CONTEXT=share/git/FP17/bin/docker/linux-64
+    DOCKER_CONTAINER=fp17
+    CONDA_VERSION=3  
   - ANACONDA_RELEASE=true
 
 matrix:
@@ -126,6 +164,14 @@ matrix:
            CONDA_VERSION=2
     - os: osx
       env: DOCKER_CONTEXT=bin/docker/linux-64
+           CONDA_VERSION=3
+    - os: osx
+      env: DOCKER_CONTEXT=share/git/FP17/bin/docker/linux-64
+           DOCKER_CONTAINER=fp17
+           CONDA_VERSION=2
+    - os: osx
+      env: DOCKER_CONTEXT=share/git/FP17/bin/docker/linux-64
+           DOCKER_CONTAINER=fp17
            CONDA_VERSION=3
     - os: osx
       env: CONDA_RECIPE=share/git/ClangLite/bin/conda/llvm
@@ -153,7 +199,17 @@ matrix:
     #   env: CONDA_RECIPE=bin/conda/boost-suite
     #        CONDA_VERSION=2
     #        TRAVIS_WAIT=50
-           
+    - os: linux
+      env: CONDA_VERSION=2
+           CONDA_PACKAGES=fp17
+           JUPYTER_NOTEBOOK=share/git/FP17share/jupyter/subset.ipynb
+           TRAVIS_WAIT=50
+    - os: osx
+      env: CONDA_VERSION=2
+           CONDA_PACKAGES=fp17
+           JUPYTER_NOTEBOOK=share/git/FP17share/jupyter/subset.ipynb
+           TRAVIS_WAIT=50
+
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cd share/git/ClangLite && git checkout v4.0.1 && cd ../../..; fi;
   - git clone https://github.com/StatisKit/travis-ci.git --depth=1
