--- a/appveyor.yml
+++ b/appveyor.yml
@@ -95,26 +95,26 @@ environment:
     - CONDA_RECIPE: bin\conda\statiskit-dev
       CONDA_VERSION: 3
     - CONDA_VERSION: 2
-      CONDA_RECIPE: share\gitFP17\bin\conda\fp17
+      CONDA_RECIPE: share\git\FP17\bin\conda\fp17
     - CONDA_VERSION: 3
-      CONDA_RECIPE: share\gitFP17\bin\conda\fp17
+      CONDA_RECIPE: share\git\FP17\bin\conda\fp17
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\basic.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\basic.ipynb
       CONDA_VERSION: 2
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\subset.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\subset.ipynb
       CONDA_VERSION: 2
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\template.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\template.ipynb
       CONDA_VERSION: 2
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\basic.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\basic.ipynb
       CONDA_VERSION: 3
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\subset.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\subset.ipynb
       CONDA_VERSION: 3
     - CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\gitFP17\share\jupyter\template.ipynb
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\template.ipynb
       CONDA_VERSION: 3
     - ANACONDA_RELEASE: true
 
