--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,65 +35,65 @@ platform:
 
 environment:
   matrix:
-    - CONDA_RECIPE: bin\conda\vcs
-    - CONDA_RECIPE: bin\conda\python-scons
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-scons
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\scons-tools
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-parse
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-parse
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\vcs
+    # - CONDA_RECIPE: bin\conda\python-scons
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-scons
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\scons-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-parse
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-parse
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\libtoolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\libtoolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\statiskit-dev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\statiskit-dev
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\statiskit-dev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\statiskit-dev
+    #   CONDA_VERSION: 3
     - CONDA_VERSION: 2
       CONDA_RECIPE: share\git\FP17\bin\conda\fp17
     - CONDA_VERSION: 3
@@ -117,7 +117,7 @@ environment:
       JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\template.ipynb
       CONDA_VERSION: 3
     - ANACONDA_RELEASE: true
-
+    
 matrix:
   allow_failures:
     - platform: x86
