--- a/appveyor.yml
+++ b/appveyor.yml
@@ -98,7 +98,7 @@ environment:
     #   CONDA_RECIPE: share\git\FP17\bin\conda\fp17
     # - CONDA_VERSION: 3
     #   CONDA_RECIPE: share\git\FP17\bin\conda\fp17
-    # - CONDA_PACKAGES: fp17
+    - CONDA_PACKAGES: fp17
       JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\basic.ipynb
       CONDA_VERSION: 2
     - CONDA_PACKAGES: fp17
