--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,6 @@ branches:
 image: Visual Studio 2013
 
 platform:
-  - x86
   - x64
 
 environment:
@@ -120,25 +119,11 @@ environment:
     
 matrix:
   allow_failures:
-    - platform: x86
-      CONDA_RECIPE: bin\conda\python-scons
-      CONDA_VERSION: 3
-    - platform: x86
-      CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 2
-    - platform: x86
-      CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
     - platform: x64
       CONDA_RECIPE: bin\conda\python-toolchain
       CONDA_VERSION: 2
     - platform: x64
       CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
-    - platform: x86
-      CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 2
-    - platform: x86
       CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 3
     - platform: x64
@@ -147,15 +132,15 @@ matrix:
     - platform: x64
       CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
       CONDA_VERSION: 3
-    - platform: x86
+    - platform: x64
       CONDA_PACKAGES: fp17
       JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\basic.ipynb
       CONDA_VERSION: 2
     - platform: x64
       CONDA_PACKAGES: fp17
-      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\basic.ipynb
-      CONDA_VERSION: 2
-
+      JUPYTER_NOTEBOOK: share\git\FP17\share\jupyter\subset.ipynb
+      CONDA_VERSION: 3
+      
 install:
   - git clone https://github.com/StatisKit/appveyor-ci.git --depth=1
   - cd appveyor-ci
