--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,10 +39,10 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-scons
     #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 3
     # - CONDA_RECIPE: bin\conda\python-parse
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-parse
@@ -85,10 +85,10 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 3
     - CONDA_RECIPE: bin\conda\statiskit-dev
       CONDA_VERSION: 2
     - CONDA_RECIPE: bin\conda\statiskit-dev
