--- a/bin/conda/statiskit-dev/meta.yaml
+++ b/bin/conda/statiskit-dev/meta.yaml
@@ -15,10 +15,8 @@ requirements:
     - libboost
     - libboost_core-dev
     - libtoolchain
+    - libtoolchain-dev
     - python-toolchain
-    - python-autowig
-    - python-clanglite
-    - python-clang [win]
     - vcs
     - devops-tools
   run:
@@ -27,9 +25,7 @@ requirements:
     - {{ pin_compatible('libboost_core-dev', exact=True) }}
     - {{ pin_compatible('libtoolchain', exact=True) }}
     - {{ pin_compatible('python-toolchain', exact=True) }}
-    - {{ pin_compatible('python-autowig', exact=True) }}
-    - {{ pin_compatible('python-clanglite', exact=True) }}
-    - {{ pin_compatible('python-clang', exact=True) }} [win]
+    - {{ pin_compatible('libtoolchain-dev', exact=True) }}
     - {{ pin_compatible('vcs', exact=True) }}
     - {{ pin_compatible('devops-tools', exact=True) }}
 
