--- a/travis.yml
+++ b/travis.yml
@@ -95,10 +95,10 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
     CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libtoolchain-dev
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain-dev
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/statiskit-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-dev
