--- a/travis.yml
+++ b/travis.yml
@@ -43,10 +43,10 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-scons
   #   CONDA_VERSION=3
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=2
-  # - CONDA_RECIPE=bin/conda/scons-tools
-  #   CONDA_VERSION=3
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=2
+  - CONDA_RECIPE=bin/conda/scons-tools
+    CONDA_VERSION=3
   # - CONDA_RECIPE=bin/conda/python-parse
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=bin/conda/python-parse
@@ -103,18 +103,18 @@ env:
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-dev
     CONDA_VERSION=3
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    DOCKER_CONTAINER=linux-32
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-32
-    DOCKER_CONTAINER=linux-32
-    CONDA_VERSION=3
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    DOCKER_CONTAINER=linux-64
-    CONDA_VERSION=2
-  - DOCKER_CONTEXT=bin/docker/linux-64
-    DOCKER_CONTAINER=linux-64
-    CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   DOCKER_CONTAINER=linux-32
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-32
+  #   DOCKER_CONTAINER=linux-32
+  #   CONDA_VERSION=3
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   DOCKER_CONTAINER=linux-64
+  #   CONDA_VERSION=2
+  # - DOCKER_CONTEXT=bin/docker/linux-64
+  #   DOCKER_CONTAINER=linux-64
+    # CONDA_VERSION=3
   - ANACONDA_RELEASE=true
 
 matrix:
