--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,10 +39,10 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-scons
     #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 3
     # - CONDA_RECIPE: bin\conda\python-parse
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\python-parse
