--- a/travis.yml
+++ b/travis.yml
@@ -91,14 +91,14 @@ env:
   #   CONDA_VERSION=2
   # - CONDA_RECIPE=share/git/ClangLite/bin/conda/python-clanglite
   #   CONDA_VERSION=3
-  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-    CONDA_VERSION=2
-  - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
-    CONDA_VERSION=3
-  - CONDA_RECIPE=bin/conda/libtoolchain-dev
-    CONDA_VERSION=2
-  - CONDA_RECIPE=bin/conda/libtoolchain-dev
-    CONDA_VERSION=3
+  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=share/git/AutoWIG/bin/conda/python-autowig
+  #   CONDA_VERSION=3
+  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
+  #   CONDA_VERSION=2
+  # - CONDA_RECIPE=bin/conda/libtoolchain-dev
+  #   CONDA_VERSION=3
   - CONDA_RECIPE=bin/conda/statiskit-dev
     CONDA_VERSION=2
   - CONDA_RECIPE=bin/conda/statiskit-dev
