Update recipes [skip ci]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,40 +51,40 @@ environment:
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: bin\conda\libtoolchain
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\python-toolchain
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-suite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\boost-meta
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\python-toolchain
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-suite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\boost-meta
+    #   CONDA_VERSION: 3
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
     #   CONDA_VERSION: 2
     # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
     #   CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
-      CONDA_VERSION: 3
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
-      CONDA_VERSION: 2
-    - CONDA_RECIPE: bin\conda\libtoolchain-dev
-      CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
+    #   CONDA_VERSION: 3
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 2
+    # - CONDA_RECIPE: bin\conda\libtoolchain-dev
+    #   CONDA_VERSION: 3
     - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
       CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\devops-tools\bin\conda\devops-tools
