--- a/bin/conda/libstatiskit-dev/meta.yaml
+++ b/bin/conda/libstatiskit-dev/meta.yaml
@@ -16,5 +16,9 @@ about:
 requirements:
     build:
         - libstatiskit_stl-dev
+        - libstatiskit_linalg-dev
+        - libstatiskit_core-dev
     run:
         - {{ pin_compatible('libstatiskit_stl-dev', exact=True) }}
+        - {{ pin_compatible('libstatiskit_linalg-dev', exact=True) }}
+        - {{ pin_compatible('libstatiskit_core-dev', exact=True) }}
